--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "sir-accordion",
-    "description" : "AngularJs directive that builds an vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
-    "version": "0.1",
+    "description" : "AngularJs directive that builds a vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
+    "version": "0.5.0",
     "keywords": [
     "angularjs",
     "javascript",
