--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,32 @@
-{
-    "name": "sir-accordion",
-    "description" : "AngularJs directive that builds a vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
-    "version": "0.5.0",
-    "keywords": [
+{  
+  "name":"sir-accordion",
+  "description":"AngularJs directive that builds a vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
+  "version":"0.5.1",
+  "keywords":[  
     "angularjs",
     "javascript",
     "directive",
-    "accordion"
-    ],
-    "main": "dist/scripts/sirAccordion.js",
-    "authors": [
-    "Axel salmeron", "axel.salmeron@gmail.com"
-    ],
-    "repository": {"type": "git","url": "https://github.com/SirIdeas/sirAccordion"},
-    "ignore": [
+    "accordion",
+    "menu",
+    "collapsable"
+  ],
+  "main":[  
+    "dist/scripts/sir-accordion.js",
+    "dist/styles/sir-accordion.css"
+  ],
+  "authors":[  
+    "Axel salmeron",
+    "axel.salmeron@gmail.com"
+  ],
+  "repository":{  
+    "type":"git",
+    "url":"https://github.com/SirIdeas/sirAccordion"
+  },
+  "ignore":[  
     "source",
     "spec",
+    "docs",
+    "example",
     ".bowerrc",
     ".gitignore",
     ".jshintignore",
@@ -24,19 +35,11 @@
     "gruntfile.js",
     "package.json",
     "README.md"
-    ],
-    "dependencies": {"angular": "1.2.9"},
-    "devDependencies": {},
-    "ignore": [
-    "source",
-    "spec",
-    ".bowerrc",
-    ".gitignore",
-    ".jshintignore",
-    ".jshintrc",
-    "bower.json",
-    "gruntfile.js",
-    "package.json",
-    "README.md"
-    ]
+  ],
+  "dependencies":{  
+    "angular":"~1.2"
+  },
+  "devDependencies":{  
+    "bootstrap":"~3.3"
+  }
 }
