--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {  
   "name":"sir-accordion",
   "description":"AngularJs directive that builds a vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
-  "version":"0.8.3",
+  "version":"0.9.0",
   "keywords":[  
     "angularjs",
     "javascript",
@@ -40,6 +40,7 @@
     "angular":"~1.2"
   },
   "devDependencies":{  
-    "bootstrap":"~3.3"
+    "bootstrap":"~3.3",
+    "fastclick":"~1.0"
   }
 }
