--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
     "directive",
     "accordion",
     "menu",
+    "velocity",
+    "responsive",
     "collapsable"
   ],
   "main":[  
@@ -37,7 +39,8 @@
     "README.md"
   ],
   "dependencies":{  
-    "angular":"~1.2"
+    "angular":"~1.2",
+    "velocity":"1.2.3"
   },
   "devDependencies":{  
     "bootstrap":"~3.3",
