--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,17 @@
 {  
   "name":"sir-accordion",
   "description":"AngularJs directive that builds a vertical accodion menu from a JSON object, with an optional config scope for personalization. No jQuery dependency",
-  "version":"1.0.0",
-  "keywords":[  
+  "version":"1.1.0",
+  "keywords":[
+    "angular",  
     "angularjs",
     "javascript",
     "directive",
     "accordion",
     "menu",
+    "json",
     "velocity",
+    "velocityjs"
     "responsive",
     "collapsable"
   ],
